--- a/index.html
+++ b/index.html
@@ -193,17 +193,24 @@ img {vertical-align: middle;}
       <span class="mytext">
 	<!--  <p style="margin-top: 0px; margin-bottom: 16px;"> -->
 	<p>
-	  <b>Audovia</b> is a music making application for classical musicians.&nbsp;
-	  Up to fifteen instrumental voices and a percussion track can be used
+	  <b>Audovia</b> is a music making application for classical musicians.&nbsp;</p>
+	  <p>Up to fifteen instrumental voices and a percussion track can be used
 	  with instruments chosen from the default soundbank of 128 instruments
-	  or from any other soundbank of your choice.&nbsp;
-	  Songs can be developed, tested and edited very quickly and easily
+	  or from any other soundbank of your choice.&nbsp;</p>
+	  <p>Songs can be developed, tested and edited very quickly and easily
 	  by virtue of the database structure and the JFugue MusicString notation.
 	  </p>
-	  <p style="margin-bottom: 20px;">
+	  <p>
 	  Click on one of the songs to play or pause and double-click to rewind.
 	  </p>
 
+<p style="clear: both;">
+	  <b>Audovia</b> is currently being developed on
+	  <a class="nounderline" href="https://ubuntu.com/desktop" target="_blank" rel="noopener noreferrer">Ubuntu</a>
+	  on the Oracle VM
+	  <a class="nounderline" href="https://www.virtualbox.org/" target="_blank" rel="noopener noreferrer">VirtualBox</a>
+	  virtual machine.
+	  </p>
           <!-- PayPal button -->
 	  	  <!--<div style="position: absolute; left: 50%; margin-left: 130px; top: -325px;">
 	  	  <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
@@ -215,7 +222,7 @@ img {vertical-align: middle;}
 	  	  </div>-->
 
 	  <div align="center">
-	  <p style="margin-top: 6px; margin-bottom: 18px;">
+	  <p style="margin-top: 50px;">
 
 	  <a href="https://snapcraft.io/audovia-lite"
 	          style="text-decoration:none;" target="_blank" rel="noopener noreferrer">
@@ -239,13 +246,13 @@ img {vertical-align: middle;}
 	  </div>
 
 
-	 <p style="clear: both;">
+	 <!--<p style="clear: both;">
 	  <b>Audovia</b> is currently being developed on
 	  <a class="nounderline" href="https://ubuntu.com/desktop" target="_blank" rel="noopener noreferrer">Ubuntu</a>
 	  on the Oracle VM
 	  <a class="nounderline" href="https://www.virtualbox.org/" target="_blank" rel="noopener noreferrer">VirtualBox</a>
 	  virtual machine.
-	  </p>
+	  </p>-->
 
 	  <!--The quality of your music will depend on your choice of instrument for each voice and your choice of soundbank.
 	  </p>-->
@@ -253,16 +260,16 @@ img {vertical-align: middle;}
 
 	  <div align="center">
 	      <p style="margin-top: 40px; margin-bottom: 18px;">
-	      <span class="mytext"> <hr style="height:1px;border-width:0;color:grey;background-color:grey">
+	      <span class="mytext"> <!--<hr style="height:1px;border-width:0;color:grey;background-color:grey">-->
 	      <!--<a href="https://www.facebook.com/audovia" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>Facebook</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-	      Please subscribe to my
+	      <!--Please subscribe to my
 	      <a href="https://www.youtube.com/channel/UCzEo99Tp8H87jUdYh9acs5Q" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>YouTube</b></a>
-	      channel.
+	      channel.-->
 	      <!--&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	      <a href="https://twitter.com/AudoviaMusic" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>Twitter</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	      <a href="https://songbase.github.io/doc/AudoviaDocumentation-4-0.pdf" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>Documentation</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	      <a href="https://github.com/SongBase/Audovia/discussions" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>Discussions</b></a>-->
-	      <hr style="height:1px;border-width:0;color:grey;background-color:grey">
+	      <!--<hr style="height:1px;border-width:0;color:grey;background-color:grey">-->
           </span>
           </p>
 
