--- a/index.html
+++ b/index.html
@@ -204,25 +204,25 @@ img {vertical-align: middle;}
 	  Click on one of the songs to play or pause and double-click to rewind.
 	  </p>
 
-<p style="clear: both;">
+<!--<p style="clear: both;">
 	  <b>Audovia</b> is currently being developed on
 	  <a class="nounderline" href="https://ubuntu.com/desktop" target="_blank" rel="noopener noreferrer">Ubuntu</a>
 	  on the Oracle VM
 	  <a class="nounderline" href="https://www.virtualbox.org/" target="_blank" rel="noopener noreferrer">VirtualBox</a>
 	  virtual machine.
-	  </p>
+	  </p>-->
           <!-- PayPal button -->
-	  	  <!--<div style="position: absolute; left: 50%; margin-left: 130px; top: -325px;">
+	  	  <div style="position: absolute; left: 50%; margin-left: 130px; top: -136px;">
 	  	  <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 	  	  <input type="hidden" name="cmd" value="_s-xclick" />
 	  	  <input type="hidden" name="hosted_button_id" value="GVABA73MP8PCA" />
 	  	  <input type="image" src="https://www.paypalobjects.com/en_GB/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
 	  	  <img alt="" border="0" src="https://www.paypal.com/en_GB/i/scr/pixel.gif" width="1" height="1" />
 	  	  </form>
-	  	  </div>-->
+	  	  </div>
 
 	  <div align="center">
-	  <p style="margin-top: 50px;">
+	  <p style="margin-top: 40px; margin-bottom: 40px;">
 
 	  <a href="https://snapcraft.io/audovia-lite"
 	          style="text-decoration:none;" target="_blank" rel="noopener noreferrer">
@@ -244,6 +244,16 @@ img {vertical-align: middle;}
 
 	  </p>
 	  </div>
+
+
+
+<p style="clear: both;">
+	  For Microsoft Windows users, we recommend installing Linux under
+	  <!--<a class="nounderline" href="https://ubuntu.com/desktop" target="_blank" rel="noopener noreferrer">Ubuntu</a>-->
+	  the Oracle VM
+	  <a class="nounderline" href="https://www.virtualbox.org/" target="_blank" rel="noopener noreferrer">VirtualBox</a>
+	  virtual machine.
+	  </p>
 
 
 	 <!--<p style="clear: both;">
