--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 	      href="https://fonts.googleapis.com/css?family=Ubuntu">
 
     <meta content="Donald G Gray" name="author">
-    <meta content="Music Making application for Classical Musicians" name="description">
+    <meta content="Instrumental Voices for Classical Musicians" name="description">
     <meta property="og:image" content="https://songbase.github.io/image/2018-03-25.png">
     <meta property="og:image:width" content="686">
     <meta property="og:image:height" content="385">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Audovia Music">
-    <meta property="og:description" content="Music Making application for Classical Musicians">
+    <meta property="og:description" content="Instrumental Voices for Classical Musicians">
     <meta property="og:url" content="https://songbase.github.io/">
 
     <style type="text/css">
@@ -175,10 +175,10 @@ img {vertical-align: middle;}
 <img title="Audovia Icon" alt="Audovia Icon" src="image/SongBuilderColourIcon74.png"
                 style="border: 0px solid; margin-left: 0px; margin-right: 20px; margin-top: 40px; margin-bottom: 0px;">
 <div align="center" style="margin-top: -108px; margin-bottom: -14px;">
-<h1><strong>Audovia</strong></h1>
+<h1><strong>Audovia Music</strong></h1>
 </div>
 <div align="center" style="margin-top: 0px;">
-<h2><em>Music Making for Classical Musicians</em></h2>
+<h2><em>Instrumental Voices for Classical Musicians</em></h2>
 </div>
 
 </div>
@@ -401,7 +401,7 @@ The songs here were produced by opening the WAV files in <a class="nounderline" 
       <em>
 
 
-          Copyright &copy; 2017 - 2022&nbsp;&nbsp; <a class="nounderline" href="https://songbase.github.io/mywebsite/" target="_blank" rel="noopener noreferrer">Donald G Gray</a></em><br><br>&nbsp;
+          Copyright &copy; 2017 - 2023&nbsp;&nbsp; <a class="nounderline" href="https://songbase.github.io/mywebsite/" target="_blank" rel="noopener noreferrer">Donald G Gray</a></em><br><br>&nbsp;
       </span>
 
     </div>
@@ -414,11 +414,11 @@ The songs here were produced by opening the WAV files in <a class="nounderline" 
                 <img title="Audovia Icon" alt="Audovia Icon" src="image/SongBuilderColourIcon74.png"
                 style="border: 0px solid; margin-right: 20px; margin-top: 8px; margin-bottom: 0px; float: left;">
       <div>
-      <h1 style="width:92%"><strong>Audovia</strong></h1>
+      <h1 style="width:92%"><strong>Audovia Music</strong></h1>
       </div>
 
       <div style="margin-top: -10px;">
-      <h2 style="width:92%;"><em>Music Making for Classical Musicians</em></h2>
+      <h2 style="width:92%;"><em>Instrumental Voices for Classical Musicians</em></h2>
       </div>
     </div>
 
@@ -451,7 +451,7 @@ The songs here were produced by opening the WAV files in <a class="nounderline" 
       <span class="big-text"><em>
           <br clear="all">
           <br>
-      Copyright &copy; 2017 - 2022&nbsp;&nbsp; <a class="nounderline" href="https://songbase.github.io/mywebsite/" target="_blank" rel="noopener noreferrer">Donald G Gray</a></em><br><br>&nbsp;
+      Copyright &copy; 2017 - 2023&nbsp;&nbsp; <a class="nounderline" href="https://songbase.github.io/mywebsite/" target="_blank" rel="noopener noreferrer">Donald G Gray</a></em><br><br>&nbsp;
       </span>
       </div>
 
