--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ img {vertical-align: middle;}
 
 
 <p style="clear: both;">
-	  For Microsoft Windows users, we recommend installing Linux under
+	  For Microsoft Windows users, we recommend installing Linux on
 	  <!--<a class="nounderline" href="https://ubuntu.com/desktop" target="_blank" rel="noopener noreferrer">Ubuntu</a>-->
 	  the Oracle VM
 	  <a class="nounderline" href="https://www.virtualbox.org/" target="_blank" rel="noopener noreferrer">VirtualBox</a>
